app/src/sass/crn_app/_elements-wrappers.scss
%clearfix {
    &::before,
    &::after {
        content: ' ';
        display: table;
    }

    &::after {
        clear: both;
    }
}

.clearfix {@extend %clearfix;}

// ::-webkit-scrollbar {
//     width: 0;
//     z-index: 100;
// }

// /* Track */
// ::-webkit-scrollbar-track {
//     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0);
//     -webkit-border-radius: 0px;
//     border-radius: 0px;
// }

// /* Handle */
// ::-webkit-scrollbar-thumb {
//     -webkit-border-radius: 0px;
//     border-radius: 0px;
//     background: rgba(0,0,0,0.2);
//     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5);
// }
// ::-webkit-scrollbar-thumb:window-inactive {
//     background: rgba(0,0,0,0.2);
// }

html,
body,
.app,
.main,
.page,
.full-col,
.view.container,
.route-wrapper{height: 100%;}

body {
    font-family: $font-family-cabin;
    letter-spacing: .03em;
}

.container {
    width: 100%;

    &.maxed {
        width: 90%;
        max-width: 1500px;
    }
}

.view.container {
    width: 100%;
    margin: 0;
    padding: 0;
}

.main.view.container {padding-top: 115px;}

.inner-route {
    &.light {
        background: $white;
    }

    .message-4 {
        text-align: center;
    }
}

a {
    color: $primary;
    cursor: pointer;
}

a:hover,
a:focus {
    color: lighten($primary , 15%);
    text-decoration: none;
}

a:active,
a:hover,
a:focus {
    cursor: pointer;
}

h1,
h2,
h3,
h4,
h5,
h6 {
    font-family: $font-family-open;
    font-weight: 400;
}

.href-font {
    font-family: $font-family-open;
}

.page {
    background: $e5;
    position: fixed;
    width: 100%;
    overflow-y: scroll;

    &.snapshot,
    &.dataset {
        background: $white;
    }
}

.route-wrapper {
    margin-top: 20px;

    .inner-route {
        padding: 0 25px;
    }
}

.is-front,
.snapshot,
.dataset {
    .route-wrapper {
        margin-top: 0;
    }
}

.full-col {
    padding: 0;
}

//buttons ========================

.btn-group {
    overflow: hidden;
}

%btn-basic {
    @include border-radius(1px);
    @include user-select(none);
    background: none;
    outline: none;
    white-space: nowrap;
    cursor: pointer;
    font-weight: 400;
    font-size: 12pt;
    color: $primary;
    text-align: center;
    padding: 8px 13px;
    width: 100%;
    border: 1px solid $primary;
    text-transform: uppercase;
    margin: 0 0 10px;
    transition: all .3s ease-out;

    &:hover,
    &:active,
    &.hover,
    &.active {
        border-color: $primary-hover;
        background: $fa;
        color: $primary-hover;
    }
}

.btn-basic { @extend %btn-basic;}

%btn-blue {
    @extend %btn-basic;
    background-color: $sky;
    color: $white;
    margin: 0;
    border: 0;

    &:hover,
    &:active,
    &.hover,
    &.active,
    &:focus {
        background: darken($sky, 10%);
        transition: all .3s ease-out;
        color: $white;
        outline: none;
    }
}

.btn-blue { @extend %btn-blue;}
.btn-blue.half {
    width: 48%;
    margin-right: 1%;
}

%btn-admin {
    @include border-radius(0);
    @include user-select(none);
    background: none;
    border: 1px solid $aaa;
    color: $c-77;
    box-shadow: none;
    outline: none;
    white-space: nowrap;
    cursor: pointer;
    font-weight: 300;
    text-align: center;
    text-transform: uppercase;
    transition: all .3s ease-out;
    margin: 0;
    padding: 6px 10px;

    &:hover,
    &:active,
    &.hover,
    &.active {
        border-color: $aaa;
        background: $e1;
        color: $c-66;
        transition: all .3s ease-out;
    }

    &:focus {
        border-color: $aaa;
        box-shadow: none;
        outline: none;
    }

    &.delete {
        border: 0;
        color: $white;
        background-color: $brand-danger;

        &:hover {
            color: $white;
            background: darken($brand-danger, 10%);
        }
    }

    &.success {
        border: 0;
        color: $white;
        background-color: $brand-success;

        &:hover {
            color: $white;
            border-color: lighten($brand-success, 10%);
        }
    }

    &.cancel {
        background: none;
        border: 0;
    }

    &.warning {
        border: 0;
        color: $primary;
        background: none;

        &:hover {
            color: $primary-hover;
        }

        i {margin-left: 6px;}
    }
}

.btn-admin {@extend %btn-admin;}

%btn-admin-blue {
    @extend %btn-admin;
    color: $sky;
    border: 0;
    text-transform: uppercase;
    transition: all .3s ease-out;

    &:hover,
    &:active,
    &.hover,
    &:focus,
    &.active {
        color: darken($sky, 10%);
        background: $eee;
    }
}

.btn-admin-blue {@extend %btn-admin-blue;}

%btn-submit-other {
    @extend %btn-admin-blue;
    border: 2px solid lighten($sky, 5%);

    &:active,
    &:focus {
        border: 2px solid $sky;
    }
}
.btn-submit-other,
.btn-modal-submit { @extend %btn-submit-other}

.btn-modal-submit {
    float: right !important;
}

.btn-modal-danger{
    border-color: $brand-danger;
    color: $brand-danger;
}

.btn-reset {
    @extend %btn-admin;
    border: 0;
    margin-left: 2px;
    padding: 5px;
    font-size: 12px;
}

%btn-filter {
    @include border-radius(0);
    margin: 0;
    color: $aaa;
    background: $fa;
    border: 1px solid $c2;
    border-width: 0 0 0 1px;
    padding: 6px 23px;
    text-align: center;
    display: inline-block;
    transition: all .3s ease;
}

.btn-filter {@extend %btn-filter;}

.btn-file-folder {
    @extend %btn-admin;
    border: 0;
    background: none;
    margin-left: 2px;
    padding: 2px 5px;
    font-size: 12px;
    text-transform: none;

    &:hover {
        color: $primary;
        background: none;
    }
}
/* ... */

